--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,9 +14,14 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href="https://fonts.googleapis.com/css?family=Raleway:400,700" rel="stylesheet">
+    <script src="https://cdn.ravenjs.com/3.15.0/raven.min.js"></script>
 
     <script>
-      window.__CSRF_TOKEN__ = "__REPLACE_WITH_CSRF_TOKEN__";
+      window.__CSRF_TOKEN__ = /*__REPLACE_WITH_CSRF_TOKEN__*/null || '';
+    </script>
+
+    <script>
+      Raven.config('https://b9fd130f86204c618f3a6eba66c5dbfb@sentry.io/171513', { environment: /*__REPLACE_WITH_NODE_ENV__*/null || 'development'}).install()
     </script>
     
     <title>Abricate</title>
